Tue Sep  7 12:59:18 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/commands.c: correct the bug that Garry R. Osgood reported.

Tue Sep  7 03:15:20 CEST 1999 Olof S Kylander <olof@frozenriver.com>

	* app/airbrush_blob.[ch] new file
	* app/xinput_airbrush.[ch] new file
	* gimp/app/Makefile.am
	* gimp/app/pixmaps2.h
	* gimp/app/tool_options.c
	* gimp/app/tools.c
	* gimp/app/toolsF.h

	Added my far from finished xinput airbrush tool please read 
	my dev-mail about it.

Tue Sep  7 03:16:56 MEST 1999  Sven Neumann <sven@gimp.org>

	* configure.in: build the Makefile in plug-ins/gflare/gflares.

Tue Sep  7 02:17:02 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/gimpcontextpreview.c: return FALSE in event_handlers.
	* app/tools: Shame on me! Of course a tool should have a unique
	ID number -- bad copy&paste bug!

Tue Sep  7 02:03:18 MEST 1999  Sven Neumann <sven@gimp.org>

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/imagemap/*: new files
	Added the ImageMap plug-in by Maurits Rijk <lpeek.mrijk@consunet.nl>.

Tue Sep  7 00:35:19 CEST 1999  Marc Lehmann <pcg@goof.com>

	* plug-ins/gflare: new directory, lotsa files!
	* configure.in, plug-ins/Makefile.am, re-added gflare plug-in.

Mon Sep  6 23:35:18 CEST 1999  Marc Lehmann <pcg@goof.com>

	* plug-ins/common/sel_gauss.c: new plug-in.

Mon Sep  6 21:00:57 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/about_dialog.c: added a few more contributors and changed
	the algorithm slightly. Sorry, Lauri, this isn't against you, but 
	other people should have a chance to appear first too ;-)

1999-09-06  James Henstridge  <james@daa.com.au>

	* plug-ins/Makefile.am: conditionally compile pygimp.

	* configure.in: added in macros for pygimp.  You must pass
	--enable-python to configure for it to even consider checking for
	python at the moment.

	* acinclude.m4: added python detection macros.

Mon Sep  6 03:19:27 CEST 1999 Olof S Kylander <olof@frozenriver.com>
	
	* app/blob.c Fixed a cut&paste error
